--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,6 +1,7 @@
 .filters-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: flex-end;
     gap: 14px;
     margin-bottom: 20px;
 }
@@ -14,4 +15,28 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.sort-container {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.sort-item {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    .sort-container {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+    } 
 }
