--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,12 +6,21 @@
   position: fixed;
 }
 
-.navigaton-links {
+.navigation-left {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 15px;
+}
+
+.navigation-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  margin-left: 10px;
 }
 
 @media screen and (max-width: 690px) {
